@@ -82,6 +82,7 @@ protected:
 	gamui::PushButton backButton;
 	gamui::PushButton nextButton;
 	gamui::PushButton prevButton;
+	gamui::ToggleButton reactionButton;
 	gamui::TextLabel  unitCounter;
 
 	// control buttons:
